--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <!doctype html>
 <html lang="pt-br">
 
@@ -74,12 +75,28 @@
             </div>
         </fieldset>
 
-
-
         <button class="botao" type="submit" onsubmit="">Concluído</button>
 
     </form>
 
+    <div>
+
+        <label name="filme">Jumanji</label>
+        <label name="genero">Aventura Fantasia Comédia</label>
+        <label name="duracao">107 min</label>
+        <label name="direcao">Jake Kasdan, Joe Johnston</label>
+        <ul name="elenco">
+        	<li>Robin Williams</li>
+            <li>Bonnie Hunt</li> 
+            <li>Kirsten Dunst</li>
+            <li>Bradley Pierce</li>
+            <li>Jonathan Hyde</li>
+            <li>David Alan Grier</li>
+            <li>Bebe Neuwirth</li>
+        </ul>
+            <label name="ano">1995</label>
+            <label name="pais">Estados Unidos</label>
+    </div>
 </body>
 
 </html>
