--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 <!doctype html>
 <html lang="pt-br">
 
@@ -20,40 +19,40 @@
         <p id="S2">Informe seus Dados Cadastrais</p>
         <br>
     </div>
-
+        <div class="flex flex-col">
     <form>
-
-        <fieldset class="grupo">
-
             <div class="campo">
-                <label for="nome"><strong>Nome</strong></label>
+                <label for="nome"><strong>Título</strong></label>
                 <input type="text" name="nome" id="nome" required>
             </div>
 
+            <div class="campo">
+                <label for="sobrenome"><strong>Direção</strong></label>
+                <input type="text" name="direcao" id="direcao" required>
+            </div>
 
             <div class="campo">
-                <label for="sobrenome"><strong>Sobrenome</strong></label>
-                <input type="text" name="sobrenome" id="sobrenome" required>
+                <label for="sobrenome"><strong>Elenco</strong></label>
+                <input type="text" name="elenco" id="elenco" required>
             </div>
-        </fieldset>
 
-
-        <div class="campo">
-            <label for="email"><strong>Email</strong></label>
-            <input type="email" name="email" id="email" required>
+            <div class="campo">
+                <label for="sobrenome"><strong>Duração</strong></label>
+                <input type="text" name="duracao" id="duracao" required>
+            </div>
         </div>
+        <div class="flex-1 flex-col">
+            <div class="campo">
+                <label for="sobrenome"><strong>Ano</strong></label>
+                <input type="date" name="ano" id="ano" required>
+            </div>
 
+            <div class="campo">
+                <label for="sobrenome"><strong>País</strong></label>
+                <input type="text" name="pais" id="pais" required>
+            </div>
 
-
-        <div class="campo">
-            <label for="genero"><strong>Gênero</strong></label>
-            <select id="genero" required>
-                <option selected disabled value="">Selecione</option>
-                <option>Masculino</option>
-                <option>Feminino</option>
-            </select>
-        </div>
-
+</div>  
         <fieldset class="grupo">
 
             <div id="check">
@@ -74,18 +73,16 @@
                 <label for="gen7">Drama</label>
             </div>
         </fieldset>
-
         <button class="botao" type="submit" onsubmit="">Concluído</button>
-
     </form>
 
-    <div>
-
+    <div class="box-border" style="color: rgba(130, 24, 172, 0.986);">
         <label name="filme">Jumanji</label>
         <label name="genero">Aventura Fantasia Comédia</label>
         <label name="duracao">107 min</label>
-        <label name="direcao">Jake Kasdan, Joe Johnston</label>
-        <ul name="elenco">
+        <label name="direcao">Jake Kasdan, Joe Johnston<br></label>
+        <span class="font-sans">Elenco:</span>
+        <ul class="list-disc bg-rose-200" name="elenco">
         	<li>Robin Williams</li>
             <li>Bonnie Hunt</li> 
             <li>Kirsten Dunst</li>
