--- a/pages/moviegrid.html
+++ b/pages/moviegrid.html
@@ -8,6 +8,8 @@
 <!--[if !(IE 7) | !(IE 8)  ]><!-->
 <html lang="pt-br" class="no-js">
 
+<!-- Mirrored from boostifythemes.com/demo/html/bustter/moviegridfw.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 06 May 2021 00:35:45 GMT -->
+
 <head>
 	<!-- Basic need -->
 	<title>Mega Filmes</title>
@@ -161,7 +163,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<div class="hero-ct">
-						<h1> movie listing - grid</h1>
+						<h1>Movie Listing - Grid Fullwidth</h1>
 						<ul class="breadcumb">
 							<li class="active"><a href="#">Home</a></li>
 							<li> <span class="ion-ios-arrow-right"></span> movie listing</li>
@@ -173,9 +175,9 @@
 	</div>
 	<div class="page-single">
 		<div class="container">
-			<div class="row ipad-width">
-				<div class="col-md-8 col-sm-12 col-xs-12">
-					<div class="topbar-filter">
+			<div class="row">
+				<div class="col-md-12 col-sm-12 col-xs-12">
+					<div class="topbar-filter fw">
 						<p>Found <span>1,608 movies</span> in total</p>
 						<label>Sort by:</label>
 						<select>
@@ -187,9 +189,9 @@
 							<option value="date">Release date Ascending</option>
 						</select>
 						<a href="movielist.html" class="list"><i class="ion-ios-list-outline "></i></a>
-						<a href="moviegrid.html" class="grid"><i class="ion-grid active"></i></a>
+						<a href="moviegridfw.html" class="grid"><i class="ion-grid active"></i></a>
 					</div>
-					<div class="flex-wrap-movielist">
+					<div class="flex-wrap-movielist mv-grid-fw">
 						<div class="movie-item-style-2 movie-item-style-1">
 							<img src="/assets/images/uploads/mv1.jpg" alt="">
 							<div class="hvr-inner">
@@ -210,8 +212,6 @@
 								<p class="rate"><i class="ion-android-star"></i><span>7.8</span> /10</p>
 							</div>
 						</div>
-
-
 						<div class="movie-item-style-2 movie-item-style-1">
 							<img src="/assets/images/uploads/mv-item3.jpg" alt="">
 							<div class="hvr-inner">
@@ -222,8 +222,6 @@
 								<p class="rate"><i class="ion-android-star"></i><span>7.4</span> /10</p>
 							</div>
 						</div>
-
-
 						<div class="movie-item-style-2 movie-item-style-1">
 							<img src="/assets/images/uploads/mv-item4.jpg" alt="">
 							<div class="hvr-inner">
@@ -275,6 +273,7 @@
 							</div>
 						</div>
 						<div class="movie-item-style-2 movie-item-style-1">
+
 							<img src="/assets/images/uploads/mv-item2.jpg" alt="">
 							<div class="hvr-inner">
 								<a href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
@@ -394,6 +393,27 @@
 								<p class="rate"><i class="ion-android-star"></i><span>7.4</span> /10</p>
 							</div>
 						</div>
+						<div class="movie-item-style-2 movie-item-style-1">
+							<img src="/assets/images/uploads/mv1.jpg" alt="">
+							<div class="hvr-inner">
+								<a href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
+							</div>
+							<div class="mv-item-infor">
+								<h6><a href="#">oblivion</a></h6>
+								<p class="rate"><i class="ion-android-star"></i><span>8.1</span> /10</p>
+							</div>
+						</div>
+						<div class="movie-item-style-2 movie-item-style-1">
+							<img src="/assets/images/uploads/mv2.jpg" alt="">
+							<div class="hvr-inner">
+								<a href="moviesingle.html"> Read more <i class="ion-android-arrow-dropright"></i> </a>
+							</div>
+							<div class="mv-item-infor">
+								<h6><a href="#">into the wild</a></h6>
+								<p class="rate"><i class="ion-android-star"></i><span>7.8</span> /10</p>
+							</div>
+						</div>
+
 					</div>
 					<div class="topbar-filter">
 						<label>Movies per page:</label>
@@ -411,79 +431,6 @@
 							<a href="#">78</a>
 							<a href="#">79</a>
 							<a href="#"><i class="ion-arrow-right-b"></i></a>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4 col-sm-12 col-xs-12">
-					<div class="sidebar">
-						<div class="searh-form">
-							<h4 class="sb-title">Search for movie</h4>
-							<form class="form-style-1" action="#">
-								<div class="row">
-									<div class="col-md-12 form-it">
-										<label>Movie name</label>
-										<input type="text" placeholder="Enter keywords">
-									</div>
-									<div class="col-md-12 form-it">
-										<label>Genres & Subgenres</label>
-										<div class="group-ip">
-											<select name="skills" multiple="" class="ui fluid dropdown">
-												<option value="">Enter to filter genres</option>
-												<option value="Action1">Action 1</option>
-												<option value="Action2">Action 2</option>
-												<option value="Action3">Action 3</option>
-												<option value="Action4">Action 4</option>
-												<option value="Action5">Action 5</option>
-											</select>
-										</div>
-									</div>
-									<div class="col-md-12 form-it">
-										<label>Rating Range</label>
-										<select>
-											<option value="range">-- Select the rating range below --</option>
-											<option value="saab">-- Select the rating range below --</option>
-										</select>
-									</div>
-									<div class="col-md-12 form-it">
-										<label>Release Year</label>
-										<div class="row">
-											<div class="col-md-6">
-												<select>
-													<option value="range">From</option>
-													<option value="number">10</option>
-												</select>
-											</div>
-											<div class="col-md-6">
-												<select>
-													<option value="range">To</option>
-													<option value="number">20</option>
-												</select>
-											</div>
-										</div>
-									</div>
-									<div class="col-md-12 ">
-										<input class="submit" type="submit" value="submit">
-									</div>
-								</div>
-							</form>
-						</div>
-						<div class="ads">
-							<img src="/assets/images/uploads/ads1.png" alt="">
-						</div>
-						<div class="sb-facebook sb-it">
-							<h4 class="sb-title">Find us on Facebook</h4>
-							<iframe src="#"
-								data-src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fhaintheme%2F%3Ffref%3Dts&tabs=timeline&width=340&height=315px&small_header=true&adapt_container_width=false&hide_cover=false&show_facepile=true&appId"
-								height="315" style="width:100%;border:none;overflow:hidden"></iframe>
-						</div>
-						<div class="sb-twitter sb-it">
-							<h4 class="sb-title">Tweet to us</h4>
-							<div class="slick-tw">
-								<div class="tweet item" id="599202861751410688">
-								</div>
-								<div class="tweet item" id="297462728598122498">
-								</div>
-							</div>
 						</div>
 					</div>
 				</div>
@@ -555,6 +502,6 @@
 	<script src="/assets/js/custom.js"></script>
 </body>
 
-<!-- Mirrored from boostifythemes.com/demo/html/bustter/moviegrid.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 06 May 2021 00:35:45 GMT -->
+<!-- Mirrored from boostifythemes.com/demo/html/bustter/moviegridfw.html by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 06 May 2021 00:35:45 GMT -->
 
 </html>
